chore: finish alpha version for android

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -120,6 +120,10 @@ def jscFlavor = 'org.webkit:android-jsc:+'
 def enableHermes = project.ext.react.get("enableHermes", false);
 
 android {
+    packagingOptions {
+        pickFirst '**/*.so'
+    }
+    
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     compileOptions {
@@ -179,6 +183,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.annotation:annotation:1.1.0'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
