--- a/example/package.json
+++ b/example/package.json
@@ -9,13 +9,15 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react": "17.0.1",
+    "react-native": "^0.64.2",
+    "react-native-reanimated": "^2.3.0-alpha.2",
+    "react-native-vision-camera": "^2.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/runtime": "^7.12.5",
-    "babel-plugin-module-resolver": "^4.0.0",
-    "metro-react-native-babel-preset": "^0.64.0"
+    "@babel/core": "^7.15.0",
+    "@babel/runtime": "^7.15.3",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "metro-react-native-babel-preset": "^0.66.2"
   }
 }
