--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -14,8 +14,8 @@ target 'VisionCameraQrcodeScannerExample' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
-  use_flipper!({ 'Flipper' => '0.80.0' })
+  use_flipper!()
   post_install do |installer|
-    flipper_post_install(installer)
+    react_native_post_install(installer)
   end
 end
