--- a/example/package.json
+++ b/example/package.json
@@ -9,15 +9,17 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "react": "17.0.1",
-    "react-native": "^0.64.2",
-    "react-native-reanimated": "^2.3.0-alpha.2",
-    "react-native-vision-camera": "^2.5.0"
+    "react": "17.0.2",
+    "react-native": "0.65.1",
+    "react-native-reanimated": "^2.3.0-alpha.3",
+    "react-native-screens": "3.5.0",
+    "react-native-vision-camera": "^2.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/runtime": "^7.15.3",
     "babel-plugin-module-resolver": "^4.1.0",
-    "metro-react-native-babel-preset": "^0.66.2"
+    "metro-react-native-babel-preset": "^0.66.2",
+    "react-native-codegen": "^0.0.7"
   }
 }
