--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "vision-camera-qrcode-scanner",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "VisionCamera Frame Processor Plugin to read barcodes using MLKit Vision Barcode Scanning",
   "main": "lib/commonjs/index.js",
   "module": "lib/module/index.js",
   "types": "lib/typescript/src/index.d.ts",
-  "react-native": "src/index.tsx",
-  "source": "src/index",
+  "react-native": "src/index.ts",
+  "source": "src/index.ts",
   "files": [
     "src",
     "lib",
