--- a/example/ios/VisionCameraCodeScannerExample/Info.plist
+++ b/example/ios/VisionCameraCodeScannerExample/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>VisionCameraQrcodeScanner Example</string>
+	<string>VisionCameraCodeScanner Example</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
