--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
-    "react-native-reanimated": "2.3.0-beta.4",
+    "react-native-reanimated":  "2.4.1",
     "react-native-vision-camera": "^2.9.4",
     "@commitlint/config-conventional": "^11.0.0",
     "@react-native-community/eslint-config": "^2.0.0",
