--- a/example/package.json
+++ b/example/package.json
@@ -13,7 +13,8 @@
     "react-native": "0.66.3",
     "react-native-reanimated": "2.4.1",
     "react-native-screens": "3.5.0",
-    "react-native-vision-camera": "^2.9.4"
+    "react-native-vision-camera": "^2.9.4",
+    "vision-camera-ocr": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
