--- a/example/package.json
+++ b/example/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-image-picker": "^4.8.3",
+    "react-native-mlkit-ocr": "^0.2.5",
     "react-native-reanimated": "2.4.1",
     "react-native-screens": "3.5.0",
     "react-native-vision-camera": "^2.9.4"
