--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "android",
     "ios",
     "cpp",
-    "vision-camera-code-scanner.podspec",
+    "VisionCameraCodeScanner.podspec",
     "!lib/typescript/example",
     "!android/build",
     "!ios/build"
@@ -47,32 +47,34 @@
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
-    "react-native-reanimated":  "2.4.1",
-    "react-native-vision-camera": "^2.9.4",
-    "@commitlint/config-conventional": "^11.0.0",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@release-it/conventional-changelog": "^2.0.0",
-    "@types/jest": "^26.0.0",
-    "@types/react": "^16.9.19",
-    "@types/react-native": "0.62.13",
-    "commitlint": "^11.0.0",
-    "eslint": "^7.2.0",
-    "eslint-config-prettier": "^7.0.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "husky": "^4.2.5",
-    "jest": "^26.0.1",
-    "pod-install": "^0.1.0",
-    "prettier": "^2.0.5",
-    "react": "17.0.1",
-    "react-native": "0.65.1",
-    "react-native-builder-bob": "^0.18.1",
-    "release-it": "^14.2.2",
-    "typescript": "^4.1.3"
+    "@commitlint/config-conventional": "^17.4.4",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "@release-it/conventional-changelog": "^5.1.1",
+    "@shopify/react-native-skia": "0.1.175",
+    "@tsconfig/react-native": "^2.0.2",
+    "@types/jest": "^29.5.0",
+    "@types/react": "^18.0.27",
+    "@types/react-native": "0.71.3",
+    "commitlint": "^17.5.0",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "pod-install": "^0.1.38",
+    "prettier": "^2.8.4",
+    "react": "^18.2.0",
+    "react-native": "^0.71.3",
+    "react-native-builder-bob": "^0.20.3",
+    "react-native-vision-camera": "https://github.com/mrousavy/react-native-vision-camera#af4e366312a2335535f80109e6bf0b3a977444f0",
+    "react-native-worklets": "https://github.com/chrfalch/react-native-worklets",
+    "release-it": "^15.6.0",
+    "typescript": "^4.9.5"
   },
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
-    "react-native-vision-camera": ">=2.9.4"
+    "react-native-vision-camera": "*"
   },
   "jest": {
     "preset": "react-native",
@@ -131,5 +133,9 @@
       "module",
       "typescript"
     ]
+  },
+  "packageManager": "yarn@3.5.0",
+  "resolutions": {
+    "react-native-vision-camera": "patch:react-native-vision-camera@https%3A//github.com/mrousavy/react-native-vision-camera.git%23commit=af4e366312a2335535f80109e6bf0b3a977444f0#.yarn/patches/react-native-vision-camera-https-d0b6fc3f1c.patch"
   }
 }
