--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.5.0",
     "@types/react": "^18.0.27",
-    "@types/react-native": "0.71.3",
+    "@types/react-native": "0.71.6",
     "commitlint": "^17.5.0",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.8.0",
@@ -64,9 +64,9 @@
     "pod-install": "^0.1.38",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
-    "react-native": "^0.71.3",
-    "react-native-builder-bob": "^0.20.3",
-    "react-native-vision-camera": "https://github.com/mrousavy/react-native-vision-camera#af4e366312a2335535f80109e6bf0b3a977444f0",
+    "react-native": "^0.71.7",
+    "react-native-builder-bob": "^0.20.4",
+    "react-native-vision-camera": "https://github.com/mrousavy/react-native-vision-camera#bf52e8dad74d0d0794f7515028e32ab89ae82494",
     "react-native-worklets": "https://github.com/chrfalch/react-native-worklets",
     "release-it": "^15.6.0",
     "typescript": "^4.9.5"
@@ -136,6 +136,7 @@
   },
   "packageManager": "yarn@3.5.0",
   "resolutions": {
-    "react-native-vision-camera": "patch:react-native-vision-camera@https%3A//github.com/mrousavy/react-native-vision-camera.git%23commit=af4e366312a2335535f80109e6bf0b3a977444f0#.yarn/patches/react-native-vision-camera-https-d0b6fc3f1c.patch"
+    "@shopify/react-native-skia@0.1.175": "patch:@shopify/react-native-skia@npm%3A0.1.175#./.yarn/patches/@shopify-react-native-skia-npm-0.1.175-d3b0de54d9.patch",
+    "react-native-vision-camera": "patch:react-native-vision-camera@https%3A//github.com/mrousavy/react-native-vision-camera.git%23commit=bf52e8dad74d0d0794f7515028e32ab89ae82494#.yarn/patches/react-native-vision-camera-https-95cda75d0b.patch"
   }
 }
