fix/remove-skia-workaround

--- a/example/package.json
+++ b/example/package.json
@@ -9,23 +9,22 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "@shopify/react-native-skia": "0.1.175",
+    "@shopify/react-native-skia": "0.1.186",
     "react": "18.2.0",
     "react-native": "0.71.7",
-    "react-native-screens": "3.5.0",
-    "react-native-vision-camera": "https://github.com/mrousavy/react-native-vision-camera#bf52e8dad74d0d0794f7515028e32ab89ae82494",
+    "react-native-screens": "^3.20.0",
+    "react-native-vision-camera": "https://github.com/mrousavy/react-native-vision-camera#820db3ca9e646a611b54f55c402ea9cbf022b7f3",
     "react-native-worklets": "https://github.com/chrfalch/react-native-worklets"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/runtime": "^7.15.3",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "metro-react-native-babel-preset": "^0.66.2",
+    "@babel/core": "^7.20.0",
+    "@babel/runtime": "^7.20.13",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "metro-react-native-babel-preset": "^0.76.4",
     "string-hash-64": "^1.0.3"
   },
   "packageManager": "yarn@3.5.0",
   "resolutions": {
-    "@shopify/react-native-skia@0.1.175": "patch:@shopify/react-native-skia@npm%3A0.1.175#./.yarn/patches/@shopify-react-native-skia-npm-0.1.175-d3b0de54d9.patch",
-    "react-native-vision-camera": "patch:react-native-vision-camera@https%3A//github.com/mrousavy/react-native-vision-camera.git%23commit=bf52e8dad74d0d0794f7515028e32ab89ae82494#./.yarn/patches/react-native-vision-camera-https-95cda75d0b.patch"
+    "react-native-vision-camera": "patch:react-native-vision-camera@https%3A//github.com/mrousavy/react-native-vision-camera.git%23commit=820db3ca9e646a611b54f55c402ea9cbf022b7f3#./.yarn/patches/react-native-vision-camera-https-167742576d.patch"
   }
 }
