--- a/package.json
+++ b/package.json
@@ -47,29 +47,28 @@
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
-    "@commitlint/config-conventional": "^17.4.4",
+    "@commitlint/config-conventional": "^17.6.7",
     "@react-native-community/eslint-config": "^3.2.0",
-    "@release-it/conventional-changelog": "^5.1.1",
-    "@shopify/react-native-skia": "0.1.186",
-    "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^29.5.0",
-    "@types/react": "^18.0.27",
-    "@types/react-native": "0.71.6",
-    "commitlint": "^17.5.0",
-    "eslint": "^8.33.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "@release-it/conventional-changelog": "^7.0.0",
+    "@tsconfig/react-native": "^3.0.2",
+    "@types/jest": "^29.5.3",
+    "@types/react": "^18.2.18",
+    "@types/react-native": "^0.72.2",
+    "commitlint": "^17.6.7",
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^8.9.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "husky": "^8.0.3",
-    "jest": "^29.5.0",
+    "jest": "^29.6.2",
     "pod-install": "^0.1.38",
-    "prettier": "^2.8.4",
+    "prettier": "^3.0.0",
     "react": "^18.2.0",
-    "react-native": "^0.71.7",
-    "react-native-builder-bob": "^0.20.4",
-    "react-native-vision-camera": "https://github.com/mrousavy/react-native-vision-camera#820db3ca9e646a611b54f55c402ea9cbf022b7f3",
-    "react-native-worklets": "https://github.com/chrfalch/react-native-worklets#10abdf160ec0373e51138ed409ce021464c2c6fe",
-    "release-it": "^15.6.0",
-    "typescript": "^4.9.5"
+    "react-native": "^0.72.3",
+    "react-native-builder-bob": "^0.21.3",
+    "react-native-vision-camera": "^3.0.0",
+    "react-native-worklets-core": "^0.2.0",
+    "release-it": "^16.1.3",
+    "typescript": "^5.1.6"
   },
   "peerDependencies": {
     "react": "*",
@@ -136,6 +135,6 @@
   },
   "packageManager": "yarn@3.5.0",
   "resolutions": {
-    "react-native-vision-camera": "patch:react-native-vision-camera@https%3A//github.com/mrousavy/react-native-vision-camera.git%23commit=820db3ca9e646a611b54f55c402ea9cbf022b7f3#./.yarn/patches/react-native-vision-camera-https-167742576d.patch"
+    "react-native-vision-camera@^3.0.0": "patch:react-native-vision-camera@npm%3A3.0.0#./.yarn/patches/react-native-vision-camera-npm-3.0.0-21b4ab30d7.patch"
   }
 }
