--- a/package.json
+++ b/package.json
@@ -47,25 +47,30 @@
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "@babel/runtime": "^7.22.10",
     "@commitlint/config-conventional": "^17.6.7",
-    "@react-native-community/eslint-config": "^3.2.0",
+    "@react-native/eslint-config": "^0.72.2",
+    "@react-native/metro-config": "^0.72.9",
+    "@react-native/typescript-config": "^0.73.0",
     "@release-it/conventional-changelog": "^7.0.0",
-    "@tsconfig/react-native": "^3.0.2",
     "@types/jest": "^29.5.3",
-    "@types/react": "^18.2.18",
+    "@types/react": "^18.2.19",
     "@types/react-native": "^0.72.2",
+    "babel-plugin-module-resolver": "^5.0.0",
     "commitlint": "^17.6.7",
     "eslint": "^8.46.0",
-    "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-prettier": "^5.0.0",
     "husky": "^8.0.3",
     "jest": "^29.6.2",
+    "metro-react-native-babel-preset": "^0.77.0",
     "pod-install": "^0.1.38",
-    "prettier": "^3.0.0",
+    "prettier": "^3.0.1",
     "react": "^18.2.0",
     "react-native": "^0.72.3",
     "react-native-builder-bob": "^0.21.3",
-    "react-native-vision-camera": "^3.0.0",
+    "react-native-vision-camera": "^3.1.0",
     "react-native-worklets-core": "^0.2.0",
     "release-it": "^16.1.3",
     "typescript": "^5.1.6"
@@ -73,7 +78,8 @@
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
-    "react-native-vision-camera": "*"
+    "react-native-vision-camera": "*",
+    "react-native-worklets-core": "*"
   },
   "jest": {
     "preset": "react-native",
@@ -133,8 +139,5 @@
       "typescript"
     ]
   },
-  "packageManager": "yarn@3.5.0",
-  "resolutions": {
-    "react-native-vision-camera@^3.0.0": "patch:react-native-vision-camera@npm%3A3.0.0#./.yarn/patches/react-native-vision-camera-npm-3.0.0-21b4ab30d7.patch"
-  }
+  "packageManager": "yarn@3.5.0"
 }
